Add font files and re-style some frontend
This includes the ff:
- Roboto fonts
- Recoding of the /create form to separate every label and input from each
other, rathern than using the array and foreach loop
- Re-styling nav menu, anchors and input=submit elements, and some other
frontend changes

--- a/public/css/aiwops/responsive.css
+++ b/public/css/aiwops/responsive.css
@@ -3,12 +3,12 @@
 }
 @media (min-width: 768px){
 	.desktopnav-cont{
-		background-color: #92d6ea;
+		background-color: paleturquoise/*#92d6ea*/;
 		/*padding-top: 6px;*/
 	}
 	#desktop-nav{
 		display: grid;
-		width: 748px;
+		width: 728px;
 		margin: auto;
 	}
 	#mobilenav-cont{
@@ -24,14 +24,13 @@
 	#desktop-nav a {
 		margin: auto 3px;
 		text-align: center;
-	    color: #636b6f;
+	    color: #1a202b;
 		font-size: 12px;
 		font-weight: 600;
 		letter-spacing: .1rem;
 		text-decoration: none;
 		text-transform: uppercase;
 		background: transparent;
-		border-color: #46b8da;
 	}
 	#desktop-nav a:hover {
 		color: #fff;
@@ -48,7 +47,7 @@
 }
 @media (min-width: 1366px){
 	.desktopnav-cont{
-		background-color: #22ff22;
+		background-color: mediumspringgreen;
 		/*padding-top: 6px;*/
 	}
 	#desktop-nav{
@@ -56,8 +55,22 @@
 		margin: auto;
 	}
 	.container{
-		width: 1200px;
+		/*width: fit-content;*/
 	}
+a.bttn,
+input[type=submit]{
+    border-color: mediumspringgreen;
+    background-color: mediumspringgreen;
+	box-shadow: #aaa 2px 3px 7px 0px;
+}
+
+
+a.bttn:hover, input[type=submit]:hover{
+	border-color: #51ff67;
+	background-color: #51ff67;
+	color: darkblue; /*ghostwhite*/
+    box-shadow: #313131 2px 3px 13px 0px;
+}
 }
 @media (min-width: 1440px){
 	
@@ -80,10 +93,14 @@
 	#desktop-nav{
 		width: unset;
 	}
+	#desktop-nav a {
+		color: #1a202b;
+
+	}
 	.for-nav>a{
 		display: block;
 	}
 	.container{
-		width: 1750px;
+		/*width: fit-content;*/
 	}
 }
